plugins {
    id 'java-library'
    id 'maven-publish'
}

group 'com.atomatus'
version '1.2.3'

java {
    sourceCompatibility = JavaVersion.VERSION_1_8
    targetCompatibility = JavaVersion.VERSION_1_8
}

compileJava {
    options.compilerArgs << '-Xlint:unchecked'
}

repositories {
    mavenCentral()
}

java {
    withSourcesJar()
    withJavadocJar()
}

publishing {
    publications {
        //noinspection GroovyAssignabilityCheck
        gpr(MavenPublication) {
            //noinspection GroovyAssignabilityCheck
            from(components.java)
        }
    }

    repositories {
        maven {
            name = "GitHubPackages"
            url = uri("https://maven.pkg.github.com/atomatus/java-util")
            credentials {
                username = project.findProperty("gpr.user") ?: System.getenv("USERNAME") ?: System.getenv("GITHUB_ACTOR")
                password = project.findProperty("gpr.key") ?: System.getenv("TOKEN") ?: System.getenv("GITHUB_TOKEN")
            }
        }
    }
}

dependencies {
    testImplementation 'junit:junit:4.12'
    implementation 'com.google.code.gson:gson:2.8.6'
    implementation ('com.thoughtworks.xstream:xstream:1.4.10') {
        exclude group: 'xpp3', module: 'xpp3_min'
    }
    implementation 'org.mongodb:bson:4.1.1'
}
